deployment/prod/fe-upme-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-upme-deployment
spec:
  selector:
    matchLabels:
      app: fe-upme
  replicas: 1
  template:
    metadata:
      labels:
        app: fe-upme
    spec:
      containers:
      - name: fe-upme-prod
        image: "asia.gcr.io/upme-322304/prod-upme-ui:latest"
