deployment/prod/fe-upme-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-upme-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: fe-ip-prod
    networking.gke.io/managed-certificates: prod-ssl-ui
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: fe-upme-service
      port:
        number: 80
  rules:
    - host: upme.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: fe-upme-service
                port:
                  number: 80
